# MicroProject

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  JAVA_BRIDGE.md  NOTICE  PLAN_CPAL_MIRROR_TAURI.md  README.md  README_MIRROR.md  ROADMAP.md
.github/workflows/: ci.yml
microproject/: Cargo.toml  build.rs
microproject/src/: app.rs  dependency.rs  main.rs  mspdi.rs  table_view.rs  timeline_view.rs
mirror/: .gitignore  README.md
projectlibre-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
projectlibre-tauri/backend/: Cargo.toml
projectlibre-tauri/backend/src/: lib.rs
projectlibre-tauri/frontend/: app.js  index.html  styles.css
projectlibre-tauri/java-bridge/src/: ProjectLibreBridge.java
projectlibre-tauri/src/: app.rs  commands.rs  engine.rs  interop.rs  java_bridge.rs  main.rs  models.rs  mspdi.rs  session.rs  storage.rs
projectlibre-tauri/src-tauri/: README.md
projectlibre-tauri/testdata/: demo-showcase.xml
scripts/: mirror_sync.sh
upstream/: NOTICE  README.md
upstream/projectlibre-snapshot/: README.md
