[package]
name = "projectlibre_tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.8.3", features = ["dialog-open", "dialog-save"] }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.39.2", features = ["serialize", "encoding"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "1.5.6"

[dev-dependencies]
tempfile = "3"
