[package]
name = "microproject"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
dirs = "6"
eframe = "0.34.1"
egui_extras = "0.34.1"
quick-xml = { version = "0.39.2", features = ["serialize", "encoding"] }
roxmltree = "0.20"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]

[dev-dependencies]
tempfile = "3"
