[package]
name = "projectlibre_tauri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.20"
dirs = "5"
