[package]
name = "projectlibre_tauri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
quick-xml = { version = "0.39.2", features = ["serialize", "encoding"] }
